# DemoAnalytics

./: demo.py  pyproject.toml
other/: cli_demo.py  cli_full_demo.py
plotly_examples/05_data_app/: app_upload.py  app_what_if.py
pyexcel_examples/05_cases/case04_data_types/: solution_pydantic.py
streamlit_examples/: 01_base.py  02_filter.py  03_full.py  04_drill_down.py
