[project]
name = "demoanalytics"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ooo-dev-tools>=0.53.4",
    "oooenv>=0.2.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pyexcel>=0.7.4",
    "pyexcel-ods3>=0.6.1",
    "pyexcel-xlsx>=0.6.1",
    "streamlit>=1.58.0",
    "xlsxwriter>=3.2.9",
]
